--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,4 +8,13 @@
     tools:context="com.pit.qrcodesrajabrawijaya.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnScanAbsensi"
+            android:text="ABSENSI"
+            android:layout_marginBottom="10dp"
+            android:onClick="scanAbsensi"/>
+
+
 </android.support.constraint.ConstraintLayout>
