--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,4 +16,13 @@
         android:elevation="4dp"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnScanAbsensi"
+        android:text="ABSENSI"
+        android:layout_marginBottom="10dp"
+        android:onClick="scanAbsensi"/>
+
+
 </LinearLayout>
