--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,20 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.pit.qrcodesrajabrawijaya.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.pit.qrcodesrajabrawijaya.MainActivity">
 
-        <Button
+        <com.journeyapps.barcodescanner.DecoratedBarcodeView
+            android:id="@+id/barcode_scanner"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_above="@+id/buttonsLayout"
+            android:layout_marginTop="35dp"
+            android:layout_alignParentTop="true">
+
+        </com.journeyapps.barcodescanner.DecoratedBarcodeView>
+
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/btnScanAbsensi"
-            android:text="ABSENSI"
-            android:layout_marginBottom="10dp"
-            android:onClick="scanAbsensi"/>
+            android:layout_alignParentBottom="true"
+            android:id="@+id/buttonsLayout"
+            android:layout_toLeftOf="@+id/centerHorizont">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_height="match_parent">
 
+                        <Button
+                            android:id="@+id/button2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:onClick="pause"
+                            android:text="Jeda" />
 
-</android.support.constraint.ConstraintLayout>
+                        <Button
+                            android:id="@+id/button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:onClick="resume"
+                            android:text="Lanjut" />
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Cek Data" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/centerHorizont" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/centerHorizont"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@id/buttonsLayout"
+            android:id="@+id/barcodePreview" />
+
+        <TextView
+            android:id="@+id/txtHasil"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignTop="@id/barcodePreview"
+            android:layout_toRightOf="@id/centerHorizont"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="HASIL"
+            android:textSize="17sp"
+            android:gravity="center"
+            />
+
+</RelativeLayout>
