--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -74,6 +74,7 @@
             android:layout_toRightOf="@id/centerHorizont"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
+            android:textColor="@android:color/white"
             android:text="HASIL"
             android:textSize="17sp"
             android:gravity="center"
