--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#2B0921</color>
     <color name="colorPrimaryDark">#1c0716</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="card_background">@android:color/white</color>
+    <color name="card_background">#17746C</color>
     <color name="accent">#FF4081</color>
 </resources>
