--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -25,7 +25,10 @@
         app:cardBackgroundColor="@color/card_background"
         card_view:cardElevation="@dimen/card_elevation"
         card_view:cardUseCompatPadding="true"
-        card_view:cardCornerRadius="2dp">
+        card_view:cardCornerRadius="2dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:onClick="bukaWeb">
 
         <LinearLayout
             android:layout_width="match_parent"
