--- a/app/src/main/res/layout/activity_data_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_data_mahasiswa.xml
@@ -17,137 +17,11 @@
         android:elevation="4dp"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtNamaMaba"
-        android:textSize="15sp"
-        android:text="NAMA"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtNIMMaba"
-        android:textSize="15sp"
-        android:text="NIM"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtClusterMaba"
-        android:textSize="15sp"
-        android:text="Cluster"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtFakultasMaba"
-        android:textSize="15sp"
-        android:text="Fakultas"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtAgamaMaba"
-        android:textSize="15sp"
-        android:text="Agama"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtHPMaba"
-        android:textSize="15sp"
-        android:text="Handphone"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtWaliMaba"
-        android:textSize="15sp"
-        android:text="Wali"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtTTLMaba"
-        android:textSize="15sp"
-        android:text="TTL"
-        android:textColor="#ffffff"
-        android:textAlignment="center"
-        android:layout_marginBottom="15dp"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginBottom="15dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:text="Riwayat Penyakit"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtPenyakitMaba"
-        android:textSize="15sp"
-        android:text="-"
-        android:textColor="#ffffff"
-        android:textAlignment="center"
-        android:layout_marginBottom="10dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:text="Alergi Obat"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtAlergiObatMaba"
-        android:textSize="15sp"
-        android:text="-"
-        android:textColor="#ffffff"
-        android:textAlignment="center"
-        android:layout_marginBottom="10dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:text="Alergi Makanan"
-        android:textColor="#ffffff"
-        android:textAlignment="center"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtAlergiMakananMaba"
-        android:textSize="15sp"
-        android:text="-"
-        android:textColor="#ffffff"
-        android:textAlignment="center"
-        android:layout_marginBottom="10dp"/>
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+        <include layout="@layout/content_datamhs" />
+    </ScrollView>
 
 </LinearLayout>
