--- a/app/src/main/res/layout/content_datamhs.xml
+++ b/app/src/main/res/layout/content_datamhs.xml
@@ -22,7 +22,7 @@
         android:layout_marginLeft="@dimen/about_card_margin"
         android:layout_marginRight="@dimen/about_card_margin"
         android:layout_marginTop="@dimen/about_card_margin_top_bottom"
-        app:cardBackgroundColor="#17b595"
+        app:cardBackgroundColor="@android:color/white"
         card_view:cardElevation="@dimen/card_elevation"
         card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="2dp"
@@ -33,11 +33,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="#16a085"
+                android:background="@color/card_header"
                 android:layout_gravity="center"
                 android:padding="16dp">
 
@@ -48,9 +48,12 @@
                     android:textAllCaps="true"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
-                    android:textSize="20sp" />
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" />
 
-            </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -73,7 +76,6 @@
                     android:text="Nama"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    android:textColor="@android:color/white"
                     />
 
                 <TextView
@@ -83,7 +85,6 @@
                     android:text="NIM"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    android:textColor="@android:color/white"
                     />
 
                 <TextView
@@ -93,7 +94,6 @@
                     android:text="Cluster"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    android:textColor="@android:color/white"
                     />
 
                 <TextView
@@ -103,7 +103,6 @@
                     android:text="Fakultas"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    android:textColor="@android:color/white"
                     />
 
                 <TextView
@@ -113,7 +112,6 @@
                     android:text="Agama"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    android:textColor="@android:color/white"
                     />
 
                 <TextView
@@ -123,7 +121,6 @@
                     android:text="Handphone"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    android:textColor="@android:color/white"
                     />
 
                 <TextView
@@ -133,7 +130,6 @@
                     android:text="Wali"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    android:textColor="@android:color/white"
                     />
 
                 <TextView
@@ -143,7 +139,6 @@
                     android:text="TTL"
                     android:textAlignment="center"
                     android:textSize="15sp"
-                    android:textColor="@android:color/white"
                     />
 
             </LinearLayout>
@@ -158,23 +153,22 @@
         android:layout_marginLeft="@dimen/about_card_margin"
         android:layout_marginRight="@dimen/about_card_margin"
         android:layout_marginTop="@dimen/about_card_margin_top_bottom"
-        app:cardBackgroundColor="#17b595"
-        card_view:cardElevation="@dimen/card_elevation"
-        card_view:cardUseCompatPadding="true"
+        app:cardBackgroundColor="@android:color/white"
         card_view:cardCornerRadius="2dp"
-        >
+        card_view:cardElevation="@dimen/card_elevation"
+        card_view:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="#16a085"
                 android:layout_gravity="center"
+                android:background="@color/card_header"
+                android:orientation="horizontal"
                 android:padding="16dp">
 
                 <TextView
@@ -182,79 +176,76 @@
                     android:layout_height="wrap_content"
                     android:text="Data Kesehatan"
                     android:textAllCaps="true"
-                    android:textStyle="bold"
                     android:textColor="@android:color/white"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" />
 
-            </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/accent"/>
+                android:background="@color/accent" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_gravity="center"
+                android:orientation="vertical"
                 android:paddingBottom="16dp"
-                android:paddingTop="16dp"
-                >
+                android:paddingTop="16dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
                     android:text="Riwayat Penyakit"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textSize="15sp" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/txtPenyakitMaba"
-                    android:textSize="15sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:text="-"
-                    android:textColor="@android:color/white"
                     android:textAlignment="center"
-                    android:layout_marginBottom="10dp"/>
+                    android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
                     android:text="Alergi Obat"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textSize="15sp" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/txtAlergiObatMaba"
-                    android:textSize="15sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:text="-"
-                    android:textColor="@android:color/white"
                     android:textAlignment="center"
-                    android:layout_marginBottom="10dp"/>
+                    android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
                     android:text="Alergi Makanan"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:textSize="15sp" />
 
                 <TextView
+                    android:id="@+id/txtAlergiMakananMaba"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/txtAlergiMakananMaba"
-                    android:textSize="15sp"
+                    android:layout_marginBottom="10dp"
                     android:text="-"
-                    android:textColor="@android:color/white"
                     android:textAlignment="center"
-                    android:layout_marginBottom="10dp"/>
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
