--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,12 +24,12 @@
 
     <style name="TextLabel" parent="TextAppearance.AppCompat">
         <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:textColorHint">@color/colorPrimary</item>
         <item name="android:textSize">20sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
-        <item name="colorAccent">@android:color/white</item>
+        <item name="colorAccent">@color/colorPrimary</item>
         <item name="colorControlNormal">#458F89</item>
-        <item name="colorControlActivated">@android:color/white</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
 </resources>
