Bring it up to 1.4 *Add cyduk *Fix bug in zenfone devices

--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -53,7 +53,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
-                        android:theme="@style/TextLabel"
+                        android:textColorHint="@color/colorPrimary"
+                        android:theme="@style/AppTheme.NoActionBar"
                         >
                         <EditText
                             android:id="@+id/txtNama"
@@ -68,7 +69,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
-                        android:theme="@style/TextLabel">
+                        android:textColorHint="@color/colorPrimary"
+                        android:theme="@style/AppTheme.NoActionBar">
                         <EditText
                             android:id="@+id/txtNIM"
                             android:layout_width="match_parent"
