--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_scan"
             android:icon="@drawable/ic_menu_scan"
-            android:title="Scan QR Code" />
+            android:title="Mulai Scan" />
         <item
             android:id="@+id/nav_data"
             android:icon="@drawable/ic_menu_data"
