--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -133,7 +133,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="DIVISI"
+                    android:text="AKUN"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:textSize="15sp" />
